--- a/portafolio.html
+++ b/portafolio.html
@@ -33,9 +33,9 @@
              </nav>
             </div>      
            <div class="redes">
-                    <a href="" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/jorge-quintero-1805bb294?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTqOzAzbiRTu49oeqlqHCpg%3D%3D" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="mailto:jorgedaquintero@hotmail.com" target="_blank"><i class="far fa-envelope"></i></a>
-                    <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Daniel-J-Q" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                             </a>
                         </div>
                         <div>
-                            <a href="https://github.com" target="_blank">
+                            <a href="https://github.com/Daniel-J-Q" target="_blank">
                                 <div class="box">
                                     <img src="./img/icon-github-hab.png" alt="">
 
@@ -123,7 +123,10 @@
                 <h3>Categorias</h3>
                 <p>css + js</p>
                 </div>
+                <div class="boton-codigo">
                 <a href="" target="_blank" class="button-codigo"><i class="fab fa-github"></i></a>
+                <a href="" target="_blank" class="button-codigo"><i class="fa-solid fa-laptop"></i></a>
+            </div>
               </div>
 
             </div>
@@ -137,7 +140,10 @@
                         <h3>Tienda</h3>
                         <p>css + js</p>
                     </div>                
-                    <a href="" target="_blank" class="button-codigo"><i class="fab fa-github"></i></a>
+                    <div class="boton-codigo">
+                        <a href="" target="_blank" class="button-codigo"><i class="fab fa-github"></i></a>
+                        <a href="" target="_blank" class="button-codigo"><i class="fa-solid fa-laptop"></i></a>
+                    </div>
               </div>
 
               </div>
@@ -174,9 +180,9 @@
                 </div>
             </div>
             <div class="redes">
-                <a href="" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="far fa-envelope"></i></a>
-                <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/jorge-quintero-1805bb294?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTqOzAzbiRTu49oeqlqHCpg%3D%3D" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="mailto:jorgedaquintero@hotmail.com" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="https://github.com/Daniel-J-Q" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </div>
